--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
